crates/planarc/src/lowering/snapshots/planarc__lowering__query__tests__query_definition.snap
---
source: crates/planarc/src/lowering/query.rs
expression: ast
---
QueryDefinition {
    vis: Private,
    name: "includePattern" @ Span { start: 6, end: 20, line: 1, col: 7, line_end: 0, col_end: 20 },
    grammar: "grammars.nginx" @ Span { start: 22, end: 36, line: 1, col: 23, line_end: 0, col_end: 36 },
    value: "include (string)@path;" @ Span { start: 39, end: 63, line: 1, col: 40, line_end: 0, col_end: 63 },
} @ Span { start: 0, end: 63, line: 1, col: 1, line_end: 0, col_end: 63 }
