crates/planarc/src/lowering/snapshots/planarc__lowering__query__tests__query_definition_with_captures.snap
---
source: crates/planarc/src/lowering/query.rs
expression: ast
---
QueryDefinition {
    vis: Private,
    name: "find_stuff" @ Span { start: 6, end: 16, line: 1, col: 7, line_end: 0, col_end: 16 },
    value: "\n                (function_item \n                    name: (identifier) @fn.name\n                    body: (block) @fn.body\n                ) ; @this_is_ignored\n            " @ Span { start: 20, end: 193, line: 1, col: 21, line_end: 5, col_end: 12 },
    captures: [
        "@fn.name" @ Span { start: 92, end: 100, line: 3, col: 40, line_end: 3, col_end: 48 },
        "@fn.body" @ Span { start: 135, end: 143, line: 4, col: 35, line_end: 4, col_end: 43 },
    ],
} @ Span { start: 0, end: 194, line: 1, col: 1, line_end: 5, col_end: 13 }
